2003-06-22  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-root.c: Removed namedview tracking

	* src/sp-object-repr.c (sp_object_type_lookup): Do not register GUI types
	(sp_object_type_register): New method

	* src/sp-namedview.c (sp_document_namedview): Moved it here to clean
	up dependency chain

	* src/sp-item-group.c (sp_item_group_get_child_by_name): New method

	* src/main.c (sp_main_gui): Register GUI object types
	(sp_main_console): Ditto

	* src/document.c (sp_document_create): Check for namedview using name only

	* src/Makefile.am (spsvgview_SOURCES): Uncommented spsvgview

	* src/libnr/nr-object.c: Use listener arrays instead of lists

2003-06-20  Lauris Kaplinski  <lauris@kaplinski.com>

	* configure.in: Version 0.33pre

2003-06-19  Masatake YAMATO  <jet@gyve.org>

	* src/dialogs/desktop-properties.c (sp_color_picker_clicked): Enable "Close"
	button.
	(sp_color_picker_window_close): New functio.

2003-06-18  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/object-properties.c (sp_object_properties_dialog_destroy): Disconnect
	signals here, fixes crash

2003-06-18  Masatake YAMATO  <jet@gyve.org>

	* src/toolbox.c (sp_toolbox_*_create): passed tt to 
	sp_toolbox_new.

	* src/dialogs/align.c (sp_align_add_button): passed a 
	GtkTooltips object to sp_button_new_from_data.
	(sp_quick_align_dialog): created a new GtkTooltips object
	and passed it to sp_align_add_button.

	* src/widgets/sp-toolbox.c (sp_toolbox_new): passed a
	GtkTooltips object to sp_button_new_from_data.
	Fix a spelling miss.

	* src/widgets/sp-toolbox.h (sp_toolbox_new): passed a 
	GtkTooltips object.

2003-06-17  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-image.c (sp_image_set): Fix potential crash
	(sp_image_update): Move code here, so canvas items do not dereference
	destroyed pixbuf data

	* src/seltrans.c (sp_sel_trans_handle_request): Reverse shift behaviour for
	rotation (thanks to Pat)

2003-06-16  Lauris Kaplinski  <lauris@kaplinski.com>
